2019-01-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/XS/parsetexi/Parsetexi.pm: Remove a generated comment.

2019-01-14  Gavin Smith  <gavinsmith0123@gmail.com>

	Move function declarations to header file.

	* tp/Texinfo/XS/parsetexi/Parsetexi.xs: Move function 
	declarations to header file, api.h.  This means the compiler can 
	check the declarations are consistent with the definitions in 
	api.c.

2019-01-14  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove an unnecessary #include.

	* tp/Texinfo/XS/parsetexi/input.c,
	* tp/Texinfo/XS/parsetexi/parser.c: Remove an unnecessary 
	#include "api.h".

2019-01-14  Gavin Smith  <gavinsmith0123@gmail.com>

	Move a function between files.

	* tp/Texinfo/XS/parsetexi/api.c,
	* tp/Texinfo/XS/parsetexi/parser.c (element_type_name): Move to 
	parser.c.

2019-01-13  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove some unused variables.

	* tp/Texinfo/XS/parsetexi/separator.c (handle_close_brace):
	Remove some unused variables.

2019-01-13  Gavin Smith  <gavinsmith0123@gmail.com>

	pretest 6.5.91.

	* configure.ac: version

2019-01-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/man.c: Include stdio.h.

2019-01-12  Hans-Bernhard Bröker  <HBBroeker@t-online.de>  (tiny change)

	Fix some warnings.

	* tp/Texinfo/XS/parsetexi/close.c: Initialize a variable.

2019-01-12  Hans-Bernhard Bröker  <HBBroeker@t-online.de>  (tiny change)

	Fix some warnings.

	* tp/Texinfo/XS/parsetexi/end_line.c: Fix an unterminated 
	comment.
	(check_empty_node): Avoid reaching end of undefined function.
	* tp/Texinfo/XS/parsetexi/parser.c (register_global_command): 
	Add default cases.
	* tp/Texinfo/XS/parsetexi/multitable.c (gather_previous_item):
	Correct enum type in variable declaration.

2019-01-12  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove unused variables.

	* tp/Texinfo/XS/parsetexi/api.c (element_to_perl_hash),
	* tp/Texinfo/XS/parsetexi/parser.c (register_global_command)
	(process_remaining_on_line),