@@ -56,23 +56,6 @@ init_index_commands ()
 ELEMENT *
 get_root()
 
-char *
-element_type_name(e)
-        ELEMENT *e
-
-int
-num_contents_children(e)
-        ELEMENT *e
-
-int
-num_args_children (e)
-        ELEMENT *e
-
-ELEMENT *
-contents_child_by_index (e, index)
-        ELEMENT *e
-        int index
-
 void
 add_include_directory (filename)
         char *filename
